fix: fix text-overflow on mobile view

--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   width: 150px;
   height: 50px;
-  margin-left: auto;
+
   outline-style: none;
   border: 2px solid #fff;
   background-color: #000;
@@ -11,6 +11,7 @@
   background-position: center;
   transition: opacity 0.3s ease;
   flex-shrink: 0;
+  margin: auto 0 auto auto;
 }
 
 .profile__add:hover {
