--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -15,6 +15,5 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
-    white-space: normal;
   }
 }
