--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -10,6 +10,7 @@
   background-size: 50%;
   background-position: center;
   transition: opacity 0.3s ease;
+  flex-shrink: 0;
 }
 
 .profile__edit:hover {
