--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -15,6 +15,5 @@
     text-align: center;
     font-size: 27px;
     line-height: 33px;
-    white-space: normal;
   }
 }
