--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   padding: 40px 0 50px 0;
   gap: 30px;
 }
